# DRF-test-project

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  requirements_not_actual.txt
pizza/: admin.py  models.py  selectors.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
pizza/migrations/: 0001_initial.py  0002_remove_pizza_restaurant.py  0003_pizza_restaurant.py  0004_remove_pizza_restaurant.py  0005_pizza_restaurant.py  0006_alter_pizza_dough_type.py  0007_alter_pizza_dough_type_alter_pizza_restaurant.py  0008_pizza_slug.py  0009_alter_pizza_slug.py  0010_pizza_created_at_pizza_updated_at.py
pizza_restaurants/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
restaurant/: models.py  selectors.py  serializers.py  services.py  tests.py  urls.py  views.py
restaurant/migrations/: 0001_initial.py  0002_restaurant_just_a_temp.py  0003_remove_restaurant_just_a_temp.py  0004_remove_restaurant_id_restaurant_restaurant_id.py  0005_remove_restaurant_restaurant_id_restaurant_id.py  0006_restaurant_slug.py
templates/: index.html
